// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPalette Should return palette for primary-orange & secondary-blue 1`] = `
Object {
  "common": Object {
    "black": "#000",
    "white": "#fff",
  },
  "contained": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#d5d5d5",
      "light": "#9e9e9e",
      "main": "#e0e0e0",
    },
    "error": Object {
      "contrastText": "#fff",
      "dark": "rgb(147, 32, 32)",
      "light": "rgb(219, 88, 88)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "#fff",
      "dark": "rgb(1, 95, 146)",
      "light": "rgb(52, 159, 218)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "#fff",
      "dark": "rgb(161, 56, 0)",
      "light": "rgb(235, 115, 51)",
      "main": "#e65100",
    },
    "secondary": Object {
      "contrastText": "#fff",
      "dark": "rgb(23, 105, 170)",
      "light": "rgb(77, 171, 245)",
      "main": "#2196f3",
    },
    "success": Object {
      "contrastText": "#fff",
      "dark": "rgb(32, 87, 35)",
      "light": "rgb(87, 151, 91)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "#fff",
      "dark": "rgb(165, 75, 1)",
      "light": "rgb(240, 137, 52)",
      "main": "#ED6C02",
    },
  },
  "default": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#d5d5d5",
    "light": "#9e9e9e",
    "main": "#e0e0e0",
  },
  "disabled": Object {
    "contrastText": "rgba(0, 0, 0, 0.26)",
    "main": "rgba(0, 0, 0, 0.12)",
  },
  "error": Object {
    "contrastText": "#fff",
    "dark": "rgb(147, 32, 32)",
    "light": "rgb(219, 88, 88)",
    "main": "#d32f2f",
  },
  "info": Object {
    "contrastText": "#fff",
    "dark": "rgb(1, 95, 146)",
    "light": "rgb(52, 159, 218)",
    "main": "#0288d1",
  },
  "mode": "light",
  "outlined": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(211, 47, 47, 0.5)",
      "dark": "rgba(211, 47, 47, 0.32)",
      "light": "rgba(211, 47, 47, 0.04)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "rgba(2, 136, 209, 0.5)",
      "dark": "rgba(2, 136, 209, 0.32)",
      "light": "rgba(2, 136, 209, 0.04)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "rgba(230, 81, 0, 0.5)",
      "dark": "rgba(230, 81, 0, 0.32)",
      "light": "rgba(230, 81, 0, 0.04)",
      "main": "#e65100",
    },
    "secondary": Object {
      "contrastText": "rgba(33, 150, 243, 0.5)",
      "dark": "rgba(33, 150, 243, 0.32)",
      "light": "rgba(33, 150, 243, 0.04)",
      "main": "#2196f3",
    },
    "success": Object {
      "contrastText": "rgba(46, 125, 50, 0.5)",
      "dark": "rgba(46, 125, 50, 0.32)",
      "light": "rgba(46, 125, 50, 0.04)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "rgba(237, 108, 2, 0.5)",
      "dark": "rgba(237, 108, 2, 0.32)",
      "light": "rgba(237, 108, 2, 0.04)",
      "main": "#ED6C02",
    },
  },
  "primary": Object {
    "contrastText": "#fff",
    "dark": "rgb(161, 56, 0)",
    "light": "rgb(235, 115, 51)",
    "main": "#e65100",
  },
  "secondary": Object {
    "contrastText": "#fff",
    "dark": "rgb(23, 105, 170)",
    "light": "rgb(77, 171, 245)",
    "main": "#2196f3",
  },
  "success": Object {
    "contrastText": "#fff",
    "dark": "rgb(32, 87, 35)",
    "light": "rgb(87, 151, 91)",
    "main": "#2e7d32",
  },
  "text": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(211, 47, 47, 0.5)",
      "dark": "rgba(211, 47, 47, 0.32)",
      "light": "rgba(211, 47, 47, 0.04)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "rgba(2, 136, 209, 0.5)",
      "dark": "rgba(2, 136, 209, 0.32)",
      "light": "rgba(2, 136, 209, 0.04)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "rgba(230, 81, 0, 0.5)",
      "dark": "rgba(230, 81, 0, 0.32)",
      "light": "rgba(230, 81, 0, 0.04)",
      "main": "#e65100",
    },
    "secondary": Object {
      "contrastText": "rgba(33, 150, 243, 0.5)",
      "dark": "rgba(33, 150, 243, 0.32)",
      "light": "rgba(33, 150, 243, 0.04)",
      "main": "#2196f3",
    },
    "success": Object {
      "contrastText": "rgba(46, 125, 50, 0.5)",
      "dark": "rgba(46, 125, 50, 0.32)",
      "light": "rgba(46, 125, 50, 0.04)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "rgba(237, 108, 2, 0.5)",
      "dark": "rgba(237, 108, 2, 0.32)",
      "light": "rgba(237, 108, 2, 0.04)",
      "main": "#ED6C02",
    },
  },
  "warning": Object {
    "contrastText": "#fff",
    "dark": "rgb(165, 75, 1)",
    "light": "rgb(240, 137, 52)",
    "main": "#ED6C02",
  },
}
`;

exports[`createPalette Should return palette with default dark-mode 1`] = `
Object {
  "common": Object {
    "black": "#000",
    "white": "#fff",
  },
  "contained": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#d5d5d5",
      "light": "#9e9e9e",
      "main": "#e0e0e0",
    },
    "error": Object {
      "contrastText": "#fff",
      "dark": "rgb(170, 46, 37)",
      "light": "rgb(246, 104, 94)",
      "main": "#f44336",
    },
    "info": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(28, 127, 172)",
      "light": "rgb(83, 196, 247)",
      "main": "#29b6f6",
    },
    "primary": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(100, 141, 174)",
      "light": "rgb(166, 212, 250)",
      "main": "#90caf9",
    },
    "secondary": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(144, 102, 151)",
      "light": "rgb(215, 168, 223)",
      "main": "#ce93d8",
    },
    "success": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(71, 130, 74)",
      "light": "rgb(132, 200, 135)",
      "main": "#66bb6a",
    },
    "warning": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 116, 26)",
      "light": "rgb(255, 184, 81)",
      "main": "#ffa726",
    },
  },
  "default": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#d5d5d5",
    "light": "#9e9e9e",
    "main": "#e0e0e0",
  },
  "disabled": Object {
    "contrastText": "rgba(255, 255, 255, 0.3)",
    "main": "rgba(255, 255, 255, 0.12)",
  },
  "error": Object {
    "contrastText": "#fff",
    "dark": "rgb(170, 46, 37)",
    "light": "rgb(246, 104, 94)",
    "main": "#f44336",
  },
  "info": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(28, 127, 172)",
    "light": "rgb(83, 196, 247)",
    "main": "#29b6f6",
  },
  "mode": "dark",
  "outlined": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(244, 67, 54, 0.5)",
      "dark": "rgba(244, 67, 54, 0.32)",
      "light": "rgba(244, 67, 54, 0.04)",
      "main": "#f44336",
    },
    "info": Object {
      "contrastText": "rgba(41, 182, 246, 0.5)",
      "dark": "rgba(41, 182, 246, 0.32)",
      "light": "rgba(41, 182, 246, 0.04)",
      "main": "#29b6f6",
    },
    "primary": Object {
      "contrastText": "rgba(144, 202, 249, 0.5)",
      "dark": "rgba(144, 202, 249, 0.32)",
      "light": "rgba(144, 202, 249, 0.04)",
      "main": "#90caf9",
    },
    "secondary": Object {
      "contrastText": "rgba(206, 147, 216, 0.5)",
      "dark": "rgba(206, 147, 216, 0.32)",
      "light": "rgba(206, 147, 216, 0.04)",
      "main": "#ce93d8",
    },
    "success": Object {
      "contrastText": "rgba(102, 187, 106, 0.5)",
      "dark": "rgba(102, 187, 106, 0.32)",
      "light": "rgba(102, 187, 106, 0.04)",
      "main": "#66bb6a",
    },
    "warning": Object {
      "contrastText": "rgba(255, 167, 38, 0.5)",
      "dark": "rgba(255, 167, 38, 0.32)",
      "light": "rgba(255, 167, 38, 0.04)",
      "main": "#ffa726",
    },
  },
  "primary": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(100, 141, 174)",
    "light": "rgb(166, 212, 250)",
    "main": "#90caf9",
  },
  "secondary": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(144, 102, 151)",
    "light": "rgb(215, 168, 223)",
    "main": "#ce93d8",
  },
  "success": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(71, 130, 74)",
    "light": "rgb(132, 200, 135)",
    "main": "#66bb6a",
  },
  "text": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(244, 67, 54, 0.5)",
      "dark": "rgba(244, 67, 54, 0.32)",
      "light": "rgba(244, 67, 54, 0.04)",
      "main": "#f44336",
    },
    "info": Object {
      "contrastText": "rgba(41, 182, 246, 0.5)",
      "dark": "rgba(41, 182, 246, 0.32)",
      "light": "rgba(41, 182, 246, 0.04)",
      "main": "#29b6f6",
    },
    "primary": Object {
      "contrastText": "rgba(144, 202, 249, 0.5)",
      "dark": "rgba(144, 202, 249, 0.32)",
      "light": "rgba(144, 202, 249, 0.04)",
      "main": "#90caf9",
    },
    "secondary": Object {
      "contrastText": "rgba(206, 147, 216, 0.5)",
      "dark": "rgba(206, 147, 216, 0.32)",
      "light": "rgba(206, 147, 216, 0.04)",
      "main": "#ce93d8",
    },
    "success": Object {
      "contrastText": "rgba(102, 187, 106, 0.5)",
      "dark": "rgba(102, 187, 106, 0.32)",
      "light": "rgba(102, 187, 106, 0.04)",
      "main": "#66bb6a",
    },
    "warning": Object {
      "contrastText": "rgba(255, 167, 38, 0.5)",
      "dark": "rgba(255, 167, 38, 0.32)",
      "light": "rgba(255, 167, 38, 0.04)",
      "main": "#ffa726",
    },
  },
  "warning": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 116, 26)",
    "light": "rgb(255, 184, 81)",
    "main": "#ffa726",
  },
}
`;

exports[`createPalette Should return palette with default light-mode 1`] = `
Object {
  "common": Object {
    "black": "#000",
    "white": "#fff",
  },
  "contained": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#d5d5d5",
      "light": "#9e9e9e",
      "main": "#e0e0e0",
    },
    "error": Object {
      "contrastText": "#fff",
      "dark": "rgb(147, 32, 32)",
      "light": "rgb(219, 88, 88)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "#fff",
      "dark": "rgb(1, 95, 146)",
      "light": "rgb(52, 159, 218)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "#fff",
      "dark": "rgb(17, 82, 147)",
      "light": "rgb(71, 145, 219)",
      "main": "#1976d2",
    },
    "secondary": Object {
      "contrastText": "#fff",
      "dark": "rgb(109, 27, 123)",
      "light": "rgb(175, 82, 191)",
      "main": "#9c27b0",
    },
    "success": Object {
      "contrastText": "#fff",
      "dark": "rgb(32, 87, 35)",
      "light": "rgb(87, 151, 91)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "#fff",
      "dark": "rgb(165, 75, 1)",
      "light": "rgb(240, 137, 52)",
      "main": "#ED6C02",
    },
  },
  "default": Object {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#d5d5d5",
    "light": "#9e9e9e",
    "main": "#e0e0e0",
  },
  "disabled": Object {
    "contrastText": "rgba(0, 0, 0, 0.26)",
    "main": "rgba(0, 0, 0, 0.12)",
  },
  "error": Object {
    "contrastText": "#fff",
    "dark": "rgb(147, 32, 32)",
    "light": "rgb(219, 88, 88)",
    "main": "#d32f2f",
  },
  "info": Object {
    "contrastText": "#fff",
    "dark": "rgb(1, 95, 146)",
    "light": "rgb(52, 159, 218)",
    "main": "#0288d1",
  },
  "mode": "light",
  "outlined": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(211, 47, 47, 0.5)",
      "dark": "rgba(211, 47, 47, 0.32)",
      "light": "rgba(211, 47, 47, 0.04)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "rgba(2, 136, 209, 0.5)",
      "dark": "rgba(2, 136, 209, 0.32)",
      "light": "rgba(2, 136, 209, 0.04)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "rgba(25, 118, 210, 0.5)",
      "dark": "rgba(25, 118, 210, 0.32)",
      "light": "rgba(25, 118, 210, 0.04)",
      "main": "#1976d2",
    },
    "secondary": Object {
      "contrastText": "rgba(156, 39, 176, 0.5)",
      "dark": "rgba(156, 39, 176, 0.32)",
      "light": "rgba(156, 39, 176, 0.04)",
      "main": "#9c27b0",
    },
    "success": Object {
      "contrastText": "rgba(46, 125, 50, 0.5)",
      "dark": "rgba(46, 125, 50, 0.32)",
      "light": "rgba(46, 125, 50, 0.04)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "rgba(237, 108, 2, 0.5)",
      "dark": "rgba(237, 108, 2, 0.32)",
      "light": "rgba(237, 108, 2, 0.04)",
      "main": "#ED6C02",
    },
  },
  "primary": Object {
    "contrastText": "#fff",
    "dark": "rgb(17, 82, 147)",
    "light": "rgb(71, 145, 219)",
    "main": "#1976d2",
  },
  "secondary": Object {
    "contrastText": "#fff",
    "dark": "rgb(109, 27, 123)",
    "light": "rgb(175, 82, 191)",
    "main": "#9c27b0",
  },
  "success": Object {
    "contrastText": "#fff",
    "dark": "rgb(32, 87, 35)",
    "light": "rgb(87, 151, 91)",
    "main": "#2e7d32",
  },
  "text": Object {
    "default": Object {
      "contrastText": "rgba(0, 0, 0, 0.23)",
      "dark": "rgba(0, 0, 0, 0.28)",
      "light": "rgba(0, 0, 0, 0.04)",
      "main": "#000000",
    },
    "error": Object {
      "contrastText": "rgba(211, 47, 47, 0.5)",
      "dark": "rgba(211, 47, 47, 0.32)",
      "light": "rgba(211, 47, 47, 0.04)",
      "main": "#d32f2f",
    },
    "info": Object {
      "contrastText": "rgba(2, 136, 209, 0.5)",
      "dark": "rgba(2, 136, 209, 0.32)",
      "light": "rgba(2, 136, 209, 0.04)",
      "main": "#0288d1",
    },
    "primary": Object {
      "contrastText": "rgba(25, 118, 210, 0.5)",
      "dark": "rgba(25, 118, 210, 0.32)",
      "light": "rgba(25, 118, 210, 0.04)",
      "main": "#1976d2",
    },
    "secondary": Object {
      "contrastText": "rgba(156, 39, 176, 0.5)",
      "dark": "rgba(156, 39, 176, 0.32)",
      "light": "rgba(156, 39, 176, 0.04)",
      "main": "#9c27b0",
    },
    "success": Object {
      "contrastText": "rgba(46, 125, 50, 0.5)",
      "dark": "rgba(46, 125, 50, 0.32)",
      "light": "rgba(46, 125, 50, 0.04)",
      "main": "#2e7d32",
    },
    "warning": Object {
      "contrastText": "rgba(237, 108, 2, 0.5)",
      "dark": "rgba(237, 108, 2, 0.32)",
      "light": "rgba(237, 108, 2, 0.04)",
      "main": "#ED6C02",
    },
  },
  "warning": Object {
    "contrastText": "#fff",
    "dark": "rgb(165, 75, 1)",
    "light": "rgb(240, 137, 52)",
    "main": "#ED6C02",
  },
}
`;
